# gmail

./: .coveragerc  LICENSE.md  pyproject.toml  requirements.txt  setup.py
gmail/: exception.py  imap.py  message.py
tests/: conftest.py  test_gmail.py  test_imap.py  test_message.py
