[tool.poetry]
name = "gmail"
version = "0.1.0"
description = ""
authors = ["Ajit Nath <ajit.nath@organicgrowthfunds.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
